# nmu

./: .envrc  pyproject.toml
nmu/: __main__.py
nmu/client/: __init__.py  widgets.py
nmu/config/: __init__.py
nmu/server/: __init__.py  base.py  service.py
