[tool.poetry]
name = "nmu"
version = "0.1.0"
description = ""
authors = ["glyh <lyhokia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.56.4"
qrterm = { git = "https://github.com/glyh/qrterm.git", rev = "20e56ab" }
pyncm-async = "^0.1.1"

[tool.poetry.scripts]
nmu = "nmu.__main__:sync_entry"

[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
